--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -2,11 +2,11 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-      %title Sample Deployment
+      %title Sample Deployment    
       :css
         body {
           color: #ffffff;
-          background-color: #007f3f;
+          background-color: #00uh3f;
           font-family: Arial, sans-serif;
           font-size: 14px;
         }
@@ -25,7 +25,7 @@
     %body
     %div{:align => "center"}
       %h1 Congratulations!
-      %h2 You have successfully completed the second tutorial for AWS CodePipeline.
+      %h2 Mohit, you have successfully completed the second tutorial for AWS CodePipeline ..
       %p
         For next steps, read the
         = succeed "." do
