--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -6,7 +6,7 @@
       :css
         body {
           color: #ffffff;
-          background-color: #00uh3f;
+          background-color: #FFFF00;
           font-family: Arial, sans-serif;
           font-size: 14px;
         }
