--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -6,7 +6,7 @@
       :css
         body {
           color: #ffffff;
-          background-color: #FFFF00;
+          background-color: #000000;
           font-family: Arial, sans-serif;
           font-size: 14px;
         }
@@ -25,7 +25,7 @@
     %body
     %div{:align => "center"}
       %h1 Congratulations!
-      %h2 Mohit, you have successfully completed the second tutorial for AWS CodePipeline ..
+      %h2 Mohit, you have successfully completed the second tutorial for AWS CodePipeline..
       %p
         For next steps, read the
         = succeed "." do
